--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,8 @@
 <html>
 	<head>
 		<title>Zygote</title>
-
-		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+		
 		<link rel='stylesheet' href='css/style.css' >		
-
 		<script src="vendor/angular/angular.js"></script>
 	</head>
 
@@ -16,7 +14,7 @@
 
 			<header>
 				<h1>Zygote</h1>
-				<p class='tagline'>And so it begins..</p>
+				<p class='tagline'>So it begins..</p>
 			</header>										
 		</div>		
 					
